# lambda-lite

./: .coveragerc  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg
src/lambda-lite/: combinators.py
src/lambda-lite_MichaelLePera/: typedefs.py
src/lambda_lite/: algorithms.py  combinators.py  lambdacalculi.py  typedefs.py
