[tool.poetry]
name = "lambda-lite"
version = "0.0.4"
authors = ["Michael LePera <lepmt001@mymail.unisa.edu.au>"]
description = "Combinatory Logic implemented in Python."
readme = "README.md"
packages = [{include = "src/lambda_lite"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MichaelLePera/lambda-lite" 
Issues = "https://github.com/MichaelLePera/lambda-lite/issues"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
